@@ -349,6 +349,7 @@ class TGettext_MO extends TGettext
         // done
         @flock($this->_handle, LOCK_UN);
         @fclose($this->_handle);
+        chmod($file,0777);
         return true;
     }
 }
